# serve-pandoc

./: LICENSE  README.md  serve-pandoc.cabal  serve.cabal
src/: Main.hs  Pandoc.hs
