name:                serve-pandoc
version:             0.1.0.0
synopsis:            Simple Pandoc Hosting
description:         Please see README.md
homepage:            https://github.com/kelecorix/serve-pandoc
license:             MIT3
license-file:        LICENSE
author:              Sergey Bushnyak
maintainer:          sergey.bushnyak@sigrlami.eu
copyright:           2016 Sergey Bushnyak
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable serve
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , pandoc
                     , servant
